tests/fixtures/errors/underspecified_generic.z
# A generic type argument that names nothing, outside any template.
main: function is {
    xs: (List of: t)
    xs.append from: 1
    print "unreachable"
}
